--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <script type="module" src="script.js" defer></script>
+  <title>Les territoires français</title>
 </head>
 <body>
-  
+  <!-- <form action="" method="get">
+    <select name="region" id="region">
+      <option value="">--Choissisez une region--</option>
+      <option value="dog">Dog</option>
+      <option value="cat">Cat</option>
+      <option value="hamster">Hamster</option>
+      <option value="parrot">Parrot</option>
+      <option value="spider">Spider</option>
+      <option value="goldfish">Goldfish</option>
+    </select>
+  </form> -->
 </body>
 </html>
